<resources>
    <string name="app_name">Car Lyrics Overlay</string>
    <string name="permission_required_title">Permission Required</string>
    <string name="permission_required_desc">Please grant "Display over other apps" permission to show the lyrics overlay.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="grant_notification_permission">Enable Media/Lyrics Access</string>
    <string name="permission_granted">Access Granted</string>
    <string name="control_panel">Lyrics Dashboard</string>
    <string name="toggle_overlay">Active</string>
    <string name="lock_position">Lock (Interact Through)</string>
    <string name="text_size">Size</string>
    <string name="text_color">Color</string>
    <string name="sample_lyrics">Waiting for music...</string>
    <string name="status_locked">LOCKED</string>
    <string name="status_unlocked">DRAGGABLE</string>
    
    <!-- New Strings -->
    <string name="cat_core">Core Controls</string>
    <string name="cat_typography">Typography</string>
    <string name="cat_appearance">Appearance</string>
    <string name="cat_layout">Layout &amp; Position</string>
    
    <string name="align_left">Left</string>
    <string name="align_center">Center</string>
    <string name="align_right">Right</string>
    
    <string name="font_default">Def</string>
    <string name="font_mono">Mono</string>
    <string name="font_serif">Serif</string>
    <string name="font_sans">Sans</string>
    
    <string name="style_bold">B</string>
    <string name="style_italic">I</string>
    
    <string name="label_padding">Padding</string>
    <string name="label_text_alpha">Text Alpha</string>
    <string name="label_bg_alpha">BG Alpha</string>
    
    <string name="fine_tune_pos">Fine Tune Position</string>
</resources>